fix(tabs): fix z-index browser discrepencies
Closes #1018

--- a/demos/style/igniteui-theme.scss
+++ b/demos/style/igniteui-theme.scss
@@ -37,13 +37,10 @@ $exclude: (
 $my-tabs-theme: igx-tabs-theme(
     $item-text-color: rgba(255, 255, 255, .8),
     $item-hover-color: rgba(255, 255, 255, .8),
-
     $item-background: igx-color($default-palette, 'primary', 500),
     $item-hover-background: igx-color($default-palette, 'primary', 400),
-
     $item-active-background: igx-color($default-palette, 'primary', 600),
     $indicator-color: #fbb13c,
-
     $button-color: rgba(255, 255, 255, .8),
     $button-background: igx-color($default-palette, 'primary', 500),
     $button-hover-background: igx-color($default-palette, 'primary', 600),
@@ -52,8 +49,12 @@ $my-tabs-theme: igx-tabs-theme(
 
 .items-wrapper__item--blue {
     @include igx-tabs($my-tabs-theme);
-}
 
+    .igx-tabs__header {
+        z-index: 5;
+        position: relative;
+    }
+}
 
 // @mixin gen-color-class($name, $variant, $prefix, $suffix) {
 //     $prefix: if($prefix, '#{$prefix}-', '');
